# funcptr.org

./: .gitattributes  .gitignore  distmc.html  funcptr-org.cabal  index.html  index.html.old  projects.html  site.hs  sitectl  style.css
archives/2021/2021-02-03-intriguing-ingress/: intriguing-ingress.md
archives/2021/2021-03-31-game-engine-01/: overview-01.md
archives/2021/2021-06-18-bootrolling/: bootrolling.md
blog/2021/: 02.03.intriguing-ingress.md  02.07.intriguing-ingress-v2.md  02.23.footgun.md  03.31.sle-01.md
blog/2022-06-18/: initial-window-02.md
css/: code.css  default.css
js/: vanity.js
projects/: 00_homelab.md  01_funcptr-org.md  02_funcptr-cdn.md  03_matrix.md  99_distmc.md
templates/: default.html  post-list.html  post.html  project-list.html  project.html
vanity/: header.glsl
