cabal-version:      2.4
name:               funcptr-org
version:            1.0.0.0-2022
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base == 4.15.1.0
                  , hakyll == 4.15.1.1
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010